--- a/HackAThon/app/src/main/AndroidManifest.xml
+++ b/HackAThon/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".MapsActivity2"
+            android:label="@string/title_activity_maps2"></activity>
+        <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
             <intent-filter>
